--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
 			<div class="cont">
 				<div class="grid">
 					<div class="gcol-lt-4 gcol-tsm-6 gcol-12">
-						<p><strong>Address:</strong> Blk 6 Lot 47 Dressel St. Kensington 12 Lancaster Brgy. Navarro General Trias City Cavite</p>
+						<p><strong>Address:</strong> General Trias City Cavite</p>
 					</div>
 
 					<div class="gcol-lt-4 lt-push-4 gcol-tsm-6 gcol-12 talign rgt">
